--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -4,7 +4,16 @@
             <a href="/sales/" class="menu__el {% if active == 'sales' %}menu__el_active{% endif %}">Продажи</a>
             <a href="/services/" class="menu__el {% if active == 'services' %}menu__el_active{% endif %}">Услуги</a>
             <a href="/clients/" class="menu__el {% if active == 'clients' %}menu__el_active{% endif %}">Клиенты</a>
-            <a href="/statistics/" class="menu__el {% if active == 'statistics' %}menu__el_active{% endif %}">Статистика</a>
+            <a href="/statistics/"
+               class="menu__el {% if active == 'statistics' %}menu__el_active{% endif %}">Статистика</a>
+
+            {% if user.is_authenticated %}
+                <a href="#" class="menu__el">{{ user.email }}</a>
+                <a href="{% url 'account_logout' %}" class="menu__el">Выйти</a>
+            {% else %}
+                <a href="{% url 'account_login' %}" class="menu__el">Войти</a>
+                <a href="{% url 'account_signup' %}" class="menu__el">Регистрация</a>
+            {% endif %}
         </div>
     </div>
 </nav>
