added search clients by service on sales.html

--- a/templates/sales.html
+++ b/templates/sales.html
@@ -70,6 +70,15 @@
                                     </button>
 
                                 </div>
+                                <div class="dropdown__list _client_options_by_service">
+                                    <button class="dropdown__el">
+                                        <div class="client__title _main _name">[none]</div>
+                                        <div class="client__sale_detail">Заказ от: <span class="_purchase_date">[none]</span></div>
+                                        <div class="client__sale_service _purchase_services">[none]</div>
+                                        <div class="client__sale_detail">На общую сумму: <span class="_purchase_total">[none]</span></div>
+                                    </button>
+
+                                </div>
                             </div>
 
                         </div>
